Fixes the box shadow  to align with the rest of components

--- a/src/Dropdown.css
+++ b/src/Dropdown.css
@@ -14,7 +14,7 @@
 
 .dropdown.open {
     display: block;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     margin-bottom: 50px;
     /* Making sure it's always visible */
     z-index: 1000;
